<resources>
<<<<<<< HEAD
    <string name="app_name">Yeyoung</string>
=======
    <string name="app_name">CoAlert_Front</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">카카오톡으로 로그인</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_initial_information">InitialInformationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title_title">Category</string>

    <string name="skincare">SKINCARE</string>
    <string name="cleansing_peeling">CLEANSING \n/PEELING</string>
    <string name="suncare">SUNCARE</string>
    <string name="base">BASE</string>
    <string name="eye">EYE</string>
    <string name="lip">LIP</string>
    <string name="body">BODY</string>
    <string name="perfume">PERFUME</string>
    <string name="others">OTHERS</string>

    <string name="initial_searching">회사명 / 제품명 검색</string>
    <string name="a24">A24(에이이십사)</string>
    <string name="b_remedies">비레머디스(B:REMEDIES)</string>
    <string name="makeprem">메이크프렘(makeprem)</string>
    <string name="uv_lab">UV랩(유브이랩)</string>
    <string name="cell_fusion_c">셀퓨전씨(CellFusionC)</string>
    <string name="biore">비오레(Biore)</string>
    <string name="innisfree">이니스프리(innisfree)</string>
    <string name="roundlab">라운드랩(ROUNDLAB)</string>
    <string name="dewytree">듀이트리(DUWYTREE)</string>
    <string name="laroche_posay">라로슈포제(LAROCHE-POSAY)</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="product_name">제품 이름</string>
    <string name="company_name">회사 이름</string>
>>>>>>> aff698dbed2009c782eb0b35801d851ecbd44de8
</resources>
