<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/skincare"
            android:fontFamily="cursive"
            />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/cleansing_peeling"
            android:fontFamily="cursive"/>
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/suncare"
            android:fontFamily="cursive"/>
        <item
            android:id="@+id/nav_manage"
            android:title="@string/base"
            android:fontFamily="cursive"/>

        <item
            android:id="@+id/eye_category"
            android:title="@string/eye"
            android:fontFamily="cursive"/>
        <item
            android:id="@+id/lip_category"
            android:title="@string/lip"
            android:fontFamily="cursive"/>
        <item
            android:id="@+id/body_category"
            android:title="@string/body"
            android:fontFamily="cursive"/>

        <item
            android:id="@+id/perfume_category"
            android:title="@string/perfume"
            android:fontFamily="cursive"/>

        <item
            android:id="@+id/others_category"
            android:title="@string/others"
            android:fontFamily="cursive"/>
    </group>
</menu>
